# ad-arena

./: .gitignore  README.md  pyproject.toml
ad_arena/: __init__.py  cli.py  runner.py
ad_arena/agents/: baselines.py  bidder.py  competitors.py  llm_bidder.py
ad_arena/benchmark/: adaptation.py  harness.py  results_store.py  scoring.py  seed_manager.py
ad_arena/core/: engine.py  models.py  scenario.py  user.py
ad_arena/ui/: rendering.py  web_publisher.py
docs/: design.md
docs/leaderboard/: index.html
examples/: my_bidder.py  run_bedrock.py
scenarios/: diverse_vertical.yaml  high_competition.yaml  searchads_v1.yaml
scripts/: run_all.sh
