[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-arena"
version = "1.0.0"
description = "A simulated search-ads auction environment for benchmarking bidding algorithms"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "hypothesis>=6.0"]

[tool.setuptools.packages.find]
include = ["ad_arena*"]

[project.scripts]
arena-run = "ad_arena.cli:main"
arena-benchmark = "ad_arena.cli:benchmark_main"
arena-leaderboard = "ad_arena.cli:leaderboard_main"
arena-results = "ad_arena.cli:results_main"
